syntax = "proto3";

import "Protos/base.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "Cpnucleo.GRPC.Protos.SistemaProto";

package sistema;

service SistemaProto {

	rpc Incluir (SistemaModel) returns (SistemaModel);
	rpc Listar (google.protobuf.Empty) returns (ListarReply);
	rpc Consultar (base.BaseRequest) returns (SistemaModel);
	rpc Alterar (SistemaModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
}

message SistemaModel {

	string Id = 1;
	string Nome = 2;
	string Descricao = 3;
	string DataInclusao = 4;
}

message ListarReply {

    repeated SistemaModel Lista = 1;
}